--- a/de56/index.html
+++ b/de56/index.html
@@ -13,6 +13,8 @@
     <h1>小林正樹 デザイン演習Ⅴ</h1>
 
     <div>
+        ・Airdropで生成されるHEICみたいな拡張子は不具合がち。
+            普通の画像はscreenshotで対応しよう。
         <li>
             <a href="../de56/1.html">1.html</a>
         </li>
