--- a/de56/3.html
+++ b/de56/3.html
@@ -17,7 +17,6 @@
 
 
 
-<iframe src="./files/de56_20241007_XBP.pptx" frameborder="100"></iframe>
-
+            <embed src="./files/de56_20241007_XBP.pptx" type="application/pdf">
 
         </div>
