--- a/de56/3.html
+++ b/de56/3.html
@@ -17,6 +17,7 @@
 
 
 
-            <embed src="./files/de56_20241007_XBP.pptx" type="application/pdf">
-
+            <object data="./files/de56_20241007_XBP.pptx" width="100%" height="500"></object>
+            <p />
+            Oct/07/2024<p>
         </div>
