--- a/de56/3.html
+++ b/de56/3.html
@@ -16,8 +16,29 @@
         <div>
 
 
+            <embed src="./files/de56_20241007_XBP.pptx" type="application/pdf" width="400px" height="400px">
+                <noembed>
+                    <p>
+                        Your browser does not support PDF files.
+                        <a href="mypdf.pdf">Download the file instead</a>
+                    </p>
+                </noembed>
+            </embed>
+            
+            <object data="./files/de56_20241007_XBP.pptx" type="application/pdf" width="400px" height="400px">
+                <p>
+                    Your browser does not support PDF files.
+                    <a href="mypdf.pdf">Download the file instead</a>
+                </p>
+            </object>
+            
+            <iframe src="./files/de56_20241007_XBP.pptx" width="400px" height="400px" style="border: 0;">
+                <p>
+                    Your browser does not support PDF files.
+                    <a href="mypdf.pdf">Download the file instead</a>
+                </p>
+            </iframe>
 
-            <object data="./files/de56_20241007_XBP.pptx" width="100%" height="500"></object>
-            <p />
-            Oct/07/2024<p>
+
+
         </div>
