--- a/de56/3.html
+++ b/de56/3.html
@@ -15,6 +15,9 @@
             <div>20241007</div>
         <div>
 
+
+<iframe src="https://serviver02270.github.io/xbp/de56/files/de56_20241007_XBP"  width="400" height="600"  frameborder="0"></iframe>
+
 <a href=""./files/de56_20241007_XBP.pptx"">PDFのDLはこちら</a>
 
         </div>
