--- a/de56/3.html
+++ b/de56/3.html
@@ -16,8 +16,8 @@
         <div>
 
 
-<iframe src="https://serviver02270.github.io/xbp/de56/files/de56_20241007_XBP.pdf"  width="600" height="600"  frameborder="0"></iframe>
+<iframe src="https://serviver02270.github.io/xbp/de56/files/de56_20241007_XBP.pptx"  width="600" height="600"  frameborder="0"></iframe>
 
-<a href=""./files/de56_20241007_XBP.pptx"">PDFのDLはこちら</a>
+<a href="./files/de56_20241007_XBP.pptx">PDFのDLはこちら</a>
 
         </div>
