--- a/de56/3.html
+++ b/de56/3.html
@@ -15,9 +15,11 @@
             <div>20241007</div>
         <div>
 
-
+<!--勝手にダウンロードさせるのでボツ
 <iframe src="https://serviver02270.github.io/xbp/de56/files/de56_20241007_XBP.pptx"  width="600" height="600"  frameborder="0"></iframe>
+-->
 
 <a href="./files/de56_20241007_XBP.pptx">PDFのDLはこちら</a>
 
+pdfの埋め込みはユーチューブ埋め込みよりも難しい。
         </div>
