--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h1>小林正樹のXBPポートフォリオ</h1>
 <br>
 <br>
-<div>明日は明日の風が吹く</div>
+<div></div>
 <!-- ここからsection1 -->
 <section id="section1" class="section">
     <a href="../xbp/de12/index.html"><h2>デザイン演習Ⅰ・Ⅱ</h2></a>
